# ultrachartR

./: .gitignore  .prettierignore  QUICKSTART.md  README.md  review.md
.claude/: launch.json  settings.local.json
astro-engine/: __init__.py  bridge.py  correlation.py  market_data.py  phase_curves.py  pyproject.toml  scorer.py  trainer.py  utils.py  visualize.py
astro-engine/docs/: ARCHITECTURE.md  DESIGN.md  PYSWISSEPH.md  USAGE.md
astro-engine/models/: test_profile.json
astro-engine/tests/: conftest.py  test_correlation.py  test_phase_curves.py  test_scorer.py
astro-engine/ts-bridge/: engine.ts  types.ts
docs/: README.md  architectural-debt.md  code-review.md  optimization-ux-review.md  react-best-practices.md
invest/: MACRO_OUTLOOK.md  MEMORY.md  PORTFOLIO_DAYTRADE.md  PORTFOLIO_LONGTERM.md  RESTART_PROMPT.md  STRATEGY.md
invest/ai/: AMD.md  AVGO.md  CRWV.md  EXECUTIVE_SUMMARY.md  GOOGL.md  IREN.md  META.md  MRVL.md  MSFT.md  MU.md  NBIS.md  NVDA.md  TSM.md  VRT.md
invest/copper/: SECTOR_OVERVIEW.md
invest/gold/: SECTOR_OVERVIEW.md
invest/healthcare/: SECTOR_OVERVIEW.md
invest/international/: SECTOR_OVERVIEW.md
invest/nuclear/: SECTOR_OVERVIEW.md
invest/scripts/: postclose.bat  premarket.bat
invest/space/: SECTOR_OVERVIEW.md
invest/staples/: SECTOR_OVERVIEW.md
web/: DEVELOPMENT.md  MCP.md  QUICKSTART.md  README.md  agent-window.html  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
web/.claude/: launch.json
web/electron/: main.ts  preload.ts
web/src/: App.tsx  (+2 more)
(+114 files in other folders)
